k8s/deployment_server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sc-clip-deployment
  namespace: prod-stablecog
  labels:
    app: sc-clip
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sc-clip
  template:
    metadata:
      labels:
        app: sc-clip
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/memory
                    operator: In
                    values:
                      - 32Gi
      containers:
        - name: sc-clip
          image: replaceme
          ports:
            - containerPort: 13339
          imagePullPolicy: "Always"
          command: ["/bin/sh", "-c"]
          args: [". /app/venv/bin/activate && exec python /app/main.py"]
          readinessProbe:
            httpGet:
              path: /health
              port: 13339
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 13339
            initialDelaySeconds: 15
            periodSeconds: 10
